--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -1,8 +1,10 @@
 <header>
-  <img
-    id="logo"
-    src={{ 'prohall-logo.png' | asset_url }}
-    alt="prohall-logo" />
+  <a href="https://eurestistoredemo.myshopify.com/">
+    <img
+      id="logo"
+      src={{ 'prohall-logo.png' | asset_url }}
+      alt="prohall-logo" />
+  </a>
 </header>
 
 {% style %}
@@ -13,11 +15,11 @@
   header {
     background-color: #f1f4f8;
     display: grid;
-    justify-content: space-around;
+    justify-content: center;
     padding: 20px 0;
   }
 
   #logo {
-    width: 75%;
+    width: 300px;
   }
 {% endstyle %}
