fixed product page, added checkout button

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -44,7 +44,11 @@
     Straightening Kit—where elegance meets transformation.</p>
 
     <div class="purchase-contact">
-      <button id="buy">Buy now</button>
+      <a href="https://eurestistoredemo.myshopify.com/products/miracle-therapy-straightening-kit">   
+        <button id="buy">
+          Go to product page
+        </button>
+      </a>
       <div class="contact">
         <p><b><i>Phone:</b></i> 786-256-1582<br>
         <b><i>Whatsapp:</b></i> +1 (305) 922-3770 </p>
@@ -174,6 +178,10 @@
     border-radius: 45px;
 
     text-shadow: -2px 2px black;
+  }
+
+  #buy:hover {
+    cursor: pointer;
   }
 
   .contact {
