--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,6 +1,8 @@
 <html>
   <head>
     {{ content_for_header }}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
   <body>
