some small tweaks

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -2,7 +2,7 @@
   <div class="center">
     <img src="{{ 'prohall-logo.png' | asset_url }}" alt="prohall logo"/>
   </div>
-  <p>©2023 Your Company. All Rights Reserved. Created with Leadpages.</p>
+  <p>©2023 All Rights Reserved. Created with Shopify.</p>
   <p>Include additional legal information in this area if necessary.</p>
 </footer>
 
