--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -50,8 +50,8 @@
         </button>
       </a>
       <div class="contact">
-        <p><b><i>Phone:</b></i> 786-256-1582<br>
-        <b><i>Whatsapp:</b></i> +1 (305) 922-3770 </p>
+        <p><b><i>Phone:</b></i> XXX-XXX-XXXX<br>
+        <b><i>Whatsapp:</b></i> +X (XXX) XXX-XXXX </p>
       </div>
     </div>
 
